admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: libreserve
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: ghcr.io/libreserve/libreserve-admin:dev
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: libreserve
spec:
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
