frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: libreserve
  annotations:
    kubernetes.io/ingress.class: cloudflare-tunnel
spec:
  rules:
  - host: dev-coe.ionize13.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
